--- a/notes.org
+++ b/notes.org
@@ -1,14 +1,13 @@
-* components
-** context
+* context
   - defined by sysadmin
   - digital ocean?
     - ubuntu 14.04
   - core includes:
-    - apt, make, gcc, ghc, python2.7, node, apache
-** root agent
+    - apt, make, gcc, ghc, python2.7, node, apache, nginx
+* root agent
   - cron job for voting
   - setuid cp proposal
-** client cli
+* client cli
 commands:
  - VOTE
    - edit a local 'votes' file
@@ -17,5 +16,14 @@ commands:
  - PROPOSE
    - folder of text files to be zipped and voted on
    - folder is verified, zipped, numbered, and placed in canonical location
-** user home
-** install script
+* user home
+votes
+* bootstrap script
+  - install git
+  - git clone https://github.com/kovach/unix-nomic.git
+  - run setup
+* install script
+  - install packages
+  - game setup
+    - cron
+  - run nginx
