--- a/readme.org
+++ b/readme.org
@@ -12,8 +12,10 @@
   be run by hand.
 
   It may be necessary to disable ipv6. Add to sysctl.conf:
+  #+BEGIN_SRC
     net.ipv6.conf.all.disable_ipv6 = 1
     net.ipv6.conf.default.disable_ipv6 = 1
     net.ipv6.conf.lo.disable_ipv6 = 1
-  Then run sudo sysctl -p or reboot
+  #+END_SRC
+  Then run ~sudo sysctl -p~ or reboot.
 
