--- a/readme.org
+++ b/readme.org
@@ -6,7 +6,8 @@
 
 * Installation
 
-  The nomic is designed to be used on Ubuntu Server 14.04.1 LTS.
+  The nomic is designed to be used on Ubuntu Server 14.04.1 LTS.  Make
+  sure to install it with openssh-server.
 
   Once there is such a system running, the bootstrap.sh script should
   be run by hand.
@@ -18,4 +19,3 @@
     net.ipv6.conf.lo.disable_ipv6 = 1
   #+END_SRC
   Then run ~sudo sysctl -p~ or reboot.
-
